solucion de otros pustos

--- a/client/index.html
+++ b/client/index.html
@@ -90,36 +90,36 @@
       <script src="app/parte3/telefonica/telefonica.js"></script>
       <script src="app/parte3/viajes/viajes.controller.js"></script>
       <script src="app/parte3/viajes/viajes.js"></script>
-      <script src="app/parte4/banco/banco.controller.js"></script>
-      <script src="app/parte4/banco/banco.js"></script>
-      <script src="app/parte4/becas/becas.controller.js"></script>
-      <script src="app/parte4/becas/becas.js"></script>
-      <script src="app/parte4/bono-navideño/bono-navideño.controller.js"></script>
-      <script src="app/parte4/bono-navideño/bono-navideño.js"></script>
-      <script src="app/parte4/bono-profesor/bono-profesor.controller.js"></script>
-      <script src="app/parte4/bono-profesor/bono-profesor.js"></script>
-      <script src="app/parte4/bonos-tienda/bonos-tienda.controller.js"></script>
-      <script src="app/parte4/bonos-tienda/bonos-tienda.js"></script>
-      <script src="app/parte4/bonos/bonos.controller.js"></script>
-      <script src="app/parte4/bonos/bonos.js"></script>
-      <script src="app/parte4/calificacion/calificacion.controller.js"></script>
-      <script src="app/parte4/calificacion/calificacion.js"></script>
-      <script src="app/parte4/dia-semana/dia-semana.controller.js"></script>
-      <script src="app/parte4/dia-semana/dia-semana.js"></script>
-      <script src="app/parte4/pantalones/pantalones.controller.js"></script>
-      <script src="app/parte4/pantalones/pantalones.js"></script>
-      <script src="app/parte4/paquete-diciembre/paquete-diciembre.controller.js"></script>
-      <script src="app/parte4/paquete-diciembre/paquete-diciembre.js"></script>
-      <script src="app/parte4/polizas/polizas.controller.js"></script>
-      <script src="app/parte4/polizas/polizas.js"></script>
-      <script src="app/parte4/sueldo-semanal/sueldo-semanal.controller.js"></script>
-      <script src="app/parte4/sueldo-semanal/sueldo-semanal.js"></script>
-      <script src="app/parte4/tipo-vacuna/tipo-vacuna.controller.js"></script>
-      <script src="app/parte4/tipo-vacuna/tipo-vacuna.js"></script>
-      <script src="app/parte4/vacaciones/vacaciones.controller.js"></script>
-      <script src="app/parte4/vacaciones/vacaciones.js"></script>
-      <script src="app/parte4/viaje-estudios/viaje-estudios.controller.js"></script>
-      <script src="app/parte4/viaje-estudios/viaje-estudios.js"></script>
+      <script src="app/parte4/3.10-vacaciones/vacaciones.controller.js"></script>
+      <script src="app/parte4/3.10-vacaciones/vacaciones.js"></script>
+      <script src="app/parte4/3.11-bonos-tienda/bonos-tienda.controller.js"></script>
+      <script src="app/parte4/3.11-bonos-tienda/bonos-tienda.js"></script>
+      <script src="app/parte4/3.12-sueldo-semanal/sueldo-semanal.controller.js"></script>
+      <script src="app/parte4/3.12-sueldo-semanal/sueldo-semanal.js"></script>
+      <script src="app/parte4/3.13-viaje-estudios/viaje-estudios.controller.js"></script>
+      <script src="app/parte4/3.13-viaje-estudios/viaje-estudios.js"></script>
+      <script src="app/parte4/3.14-calificacion/calificacion.controller.js"></script>
+      <script src="app/parte4/3.14-calificacion/calificacion.js"></script>
+      <script src="app/parte4/3.15-dia-semana/dia-semana.controller.js"></script>
+      <script src="app/parte4/3.15-dia-semana/dia-semana.js"></script>
+      <script src="app/parte4/3.16-bono-profesor/bono-profesor.controller.js"></script>
+      <script src="app/parte4/3.16-bono-profesor/bono-profesor.js"></script>
+      <script src="app/parte4/3.17-paquete-diciembre/paquete-diciembre.controller.js"></script>
+      <script src="app/parte4/3.17-paquete-diciembre/paquete-diciembre.js"></script>
+      <script src="app/parte4/3.18-bono-navideño/bono-navideño.controller.js"></script>
+      <script src="app/parte4/3.18-bono-navideño/bono-navideño.js"></script>
+      <script src="app/parte4/3.19-tipo-vacuna/tipo-vacuna.controller.js"></script>
+      <script src="app/parte4/3.19-tipo-vacuna/tipo-vacuna.js"></script>
+      <script src="app/parte4/3.20-pantalones/pantalones.controller.js"></script>
+      <script src="app/parte4/3.20-pantalones/pantalones.js"></script>
+      <script src="app/parte4/3.21-banco/banco.controller.js"></script>
+      <script src="app/parte4/3.21-banco/banco.js"></script>
+      <script src="app/parte4/3.7-becas/becas.controller.js"></script>
+      <script src="app/parte4/3.7-becas/becas.js"></script>
+      <script src="app/parte4/3.8-bonos/bonos.controller.js"></script>
+      <script src="app/parte4/3.8-bonos/bonos.js"></script>
+      <script src="app/parte4/3.9-polizas/polizas.controller.js"></script>
+      <script src="app/parte4/3.9-polizas/polizas.js"></script>
       <script src="app/promedio/promedio.controller.js"></script>
       <script src="app/promedio/promedio.js"></script>
       <script src="components/footer/footer.directive.js"></script>
